# ccl_chromium_reader

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark.py  ccl_blink_value_deserializer.py  ccl_chrome_audit.py  ccl_chromium_cache.py  ccl_chromium_filesystem.py  ccl_chromium_history.py  ccl_chromium_indexeddb.py  ccl_chromium_localstorage.py  ccl_chromium_notifications.py  ccl_chromium_profile_folder.py  ccl_chromium_sessionstorage.py  ccl_chromium_snss2.py  ccl_easy_chromium_pickle.py  ccl_leveldb.py  ccl_protobuff.py  ccl_shared_proto_db_downloads.py  ccl_simplesnappy.py  ccl_v8_value_deserializer.py  dump_indexeddb_details.py  dump_leveldb.py  pyproject.toml  requirements.txt  test.py
ccl_chromium_reader/: __init__.py  abstract_profile_folder.py  ccl_chromium_cache.py  ccl_chromium_filesystem.py  ccl_chromium_history.py  ccl_chromium_indexeddb.py  ccl_chromium_localstorage.py  ccl_chromium_notifications.py  ccl_chromium_profile_folder.py  ccl_chromium_sessionstorage.py  ccl_chromium_snss2.py  ccl_shared_proto_db_downloads.py  common.py  download_common.py  profile_folder_protocols.py  structures.py
ccl_chromium_reader/serialization_formats/: ccl_blink_value_deserializer.py  ccl_easy_chromium_pickle.py
ccl_chromium_reader/storage_formats/: ccl_leveldb.py  ccl_simplesnappy.py
extras/: make_test_indexeddb.html
src/chromedb/: ccl_blink_value_deserializer.py  ccl_chromium_cache.py  ccl_chromium_filesystem.py  ccl_chromium_indexeddb.py  ccl_chromium_localstorage.py  ccl_chromium_notifications.py  ccl_chromium_sessionstorage.py  ccl_chromium_snss2.py  ccl_leveldb.py  ccl_shared_proto_db_downloads.py
tools/: Chromium_dump_local_storage.py  Chromium_dump_session_storage.py  benchmark.py  ccl_chrome_audit.py  dump_indexeddb_details.py  dump_leveldb.py
tools_and_utilities/: Chromium_dump_local_storage.py  Chromium_dump_session_storage.py  benchmark.py  ccl_chrome_audit.py  dump_indexeddb_details.py  dump_leveldb.py  page_state.py  sqlalchemy.py
tools_and_utilities/extras/: make_many_indexeddb_databases.html  make_test_indexeddb.html  make_webstorage.html
