[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "chromedb"
description = "Package to process IndexedDb databases."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
version = "0.16.0"
authors = [
    { name = "Alexander Caithness", email = "contact@cclsolutionsgroup.com" }
]
dependencies = [
"Brotli==1.0.9",
"Jinja2==3.1.2",
"MarkupSafe==2.1.1",
"pycryptodome==3.15.0"
]

[project.urls]
Homepage = "https://github.com/cclgroupltd/ccl_chrome_indexeddb/"
Issues = "https://github.com/cclgroupltd/ccl_chrome_indexeddb/issues"

include = ["*.py", "*.pyi", "**/pyproject.toml"]